--- a/index.html
+++ b/index.html
@@ -7,11 +7,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.4.1/dist/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
     <link rel="stylesheet" href="css/main.css">
-    <title>One Pager Website</title>
+    <title>Week 6 Hw</title>
 </head>
 
 <body>
-<h1 class="text-center">Welcome to our form:</h1>
+<h1 class="text-center">Welcome to my form:</h1>
 
 <div class='container'>
     <form onsubmit='return false'>
@@ -32,13 +32,47 @@
         <div class='form-group'> <label for='exampleFormControlFile1'>Personalize</label> <input class='form-control' type='text' placeholder='Default input'>
         </div>
         <div class='form-group'> <label for='exampleFormControlFile1'>Please Submit Here.</label> 
-        </div><button type='submit' class='btn btn-outline-info'>Submit</button>
     </form>
 </div>
 
 
+<div class="flexItem">
+  <h1 class="text-center">Buy Tickets:</h1>
+    <table class="ticketSection">
+      <tr>
+        <td colspan="2"> <p>Pretoria R50</p></td>
+        <td colspan="2">  <div class="stepper-input">
+          <button class="btn btn-left" onclick="decreaseMars();total()">-</button>
+          <input type="text" value="0" class="input-box" id="ticketsMars" onchange="total()" >
+          <button class="btn btn-right" onclick="increaseMars();total()">+</button>
+       </div></td>
+      </tr>
+      <tr>
+        <td colspan="2"> <p>Cape Town R70</p></td>
+        <td colspan="2">  <div class="stepper-input">
+          <button class="btn btn-left" onclick="decreaseSaturn();total()">-</button>
+          <input type="text" value="0" class="input-box" id="ticketsSaturn" onchange="total()" >
+          <button class="btn btn-right" onclick="increaseSaturn();total()">+</button>
+       </div></td>
+      </tr>
+ 
+  
+      <tr>
+        <td colspan="4"> <p>Total: <span id="total"></span></p></td>
+      </tr>
+    </table>
+  </div>
+  <button type='submit' class='btn btn-outline-info' onclick="displayThankYou()">Submit</button>
+<script>
+  function displayThankYou() {
+    alert("Thank you, we'll send you a message shorty.");
+  }
+</script>
+
+
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/5.1.3/js/bootstrap.bundle.min.js"></script>
+    <script src="js/script.js"></script>
 </body>
 
 </html>
